--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.564.0",
-    "react": "^19.2.4",
-    "@google/genai": "^1.41.0",
-    "react-dom": "^19.2.4",
-    "framer-motion": "^11.0.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "lucide-react": "0.460.0",
+    "framer-motion": "11.11.17",
+    "@google/genai": "1.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
